--- a/index.html
+++ b/index.html
@@ -122,6 +122,118 @@
 
 
 
+  <section id="about" class="my-5">
+    <div class="container pb-5">
+      <div class="title py-5">
+        <div class="hidden">
+          <h2>A</h2>
+
+          <h3>
+            About US
+          </h3>
+          <div class="line"></div>
+        </div>
+
+
+        <p class="width m-auto fw-bold">Pellentesque elementum libero enim, eget gravida nunc laoreet et. Nullam ac enim
+          auctor, fringilla risus at, imperdiet turpis. Pellentesque elementum libero enim.</p>
+      </div>
+
+      <div class="row">
+        <div class="col-md-7 ">
+          <div class="about-inf">
+            <p class="m-2 text-color ">
+              Pellentesque vel elit egestas, pretium est ac, convallis orci. Vivamus sem nisl, tristique vel fringilla
+              vitae, efficitur at eros. Duis aliquet aliquet pharetra. Suspendisse bibendum erat quis gravida pulvinar.
+              Phasellus vel eros porta, blandit dui ac, viverra felis.
+            </p>
+            <p class="m-2 text-color ">
+              Nunc placerat iaculis pulvinar. Nullam auctor mauris sed urna posuere volutpat. Mauris ut dui sit amet
+              elit fermentum fermentum. Fusce tincidunt diam at bibendum porta.
+            </p>
+            <p class="m-2 text-color ">
+              Aliquam nunc felis, sagittis eu purus non, interdum vehicula urna. Vivamus congue diam sapien, eu
+              pellentesque ipsum ultricies quis.
+            </p>
+
+          </div>
+
+        </div>
+        <div class="col-md-5">
+          <div class="about-skils ps-4">
+            <div class="prog-item pb-3">
+              <div class="skill-name d-flex justify-content-between" style="width: 80%;">
+                <p class="m-1 fw-bold"> Branding
+                </p>
+                <p class="m-1 fw-bold">80%</p>
+
+              </div>
+              <div class="progress" style="height: 4px;">
+                <div class="progress-bar  main-background" role="progressbar" style="width: 80%" aria-valuenow="80"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="prog-item pb-3">
+              <div class="skill-name d-flex justify-content-between" style="width:95%;">
+                <p class="m-1 fw-bold"> Web Design
+                </p>
+                <p class="m-1 fw-bold">95%</p>
+
+              </div>
+              <div class="progress" style="height: 4px;">
+                <div class="progress-bar  main-background" role="progressbar" style="width: 95%" aria-valuenow="95"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="prog-item pb-3">
+              <div class="skill-name d-flex justify-content-between" style="width: 85%;">
+                <p class="m-1 fw-bold"> Graphic Design
+                </p>
+                <p class="m-1 fw-bold">85%</p>
+
+              </div>
+              <div class="progress" style="height: 4px;">
+                <div class="progress-bar  main-background" role="progressbar" style="width: 85%" aria-valuenow="85"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="prog-item">
+              <div class="skill-name d-flex justify-content-between" style="width: 70%;">
+                <p class="m-1 fw-bold"> Development
+
+                </p>
+                <p class="m-1 fw-bold">70%</p>
+
+              </div>
+              <div class="progress" style="height: 4px;">
+                <div class="progress-bar  main-background" role="progressbar" style="width: 70%" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+
+          </div>
+
+        </div>
+      </div>
+
+
+    </div>
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+  </section>
 
 
 
