this third section

--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,300 @@ width: 100%;
 ***************
  -->
   </section>
+  
+  <section id="Services">
+
+    <div class="container">
+      <div class="title py-5">
+        <div class="hidden">
+          <h2>S</h2>
+
+          <h3>
+            Services
+          </h3>
+          <div class="line"></div>
+        </div>
+
+
+        <p class="width m-auto fw-bold">Nullam ac enim auctor, fringilla risus at, imperdiet turpis. Pellentesque
+          elementum libero enim, eget gravida nunc laoreet et. Pellentesque elementum libero enim.</p>
+      </div>
+      <div class="row py-5">
+        <div class="col-md-4 ">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2 ">
+                <div class="ser-icon text-center">
+                  <i class="fas fa-laptop icon-ser main-color"></i>
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+                      Responsive Layout</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-4">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2 ">
+                <div class="ser-icon text-center">
+                  <i class="fas fa-pencil-ruler icon-ser main-color"></i>
+
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+
+                      Modern Design</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+        <div class="col-md-4">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2 ">
+                <div class="ser-icon text-center ">
+                  <i class="fas fa-flag icon-ser main-color"></i>
+
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text ">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+                      Font Awesome Icons</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+      <div class="row pb-5">
+        <div class="col-md-4 ">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2 ">
+                <div class="ser-icon text-center">
+                  <i class="fas fa-address-card icon-ser main-color"></i>
+
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+
+                      Ajax Portfolio</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-4">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2">
+                <div class="ser-icon text-center">
+                  <i class="fas fa-cog icon-ser main-color"></i>
+
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+
+                      Color Options</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+        <div class="col-md-4">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2 ">
+                <div class="ser-icon text-center ">
+                  <i class="fas fa-headset icon-ser main-color"></i>
+
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text ">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+                      Audio Support</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+      <div class="row pb-5">
+        <div class="col-md-4 ">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2 ">
+                <div class="ser-icon text-center">
+                  <i class="fas fa-clipboard-list icon-ser main-color"></i>
+
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+
+
+                      Well Documented</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-4">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2 ">
+                <div class="ser-icon text-center">
+                  <i class="fas fa-video icon-ser main-color"></i>
+
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+
+
+                      Background Videos</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+        <div class="col-md-4">
+          <div class="services-block">
+            <div class="row">
+              <div class="col-2 ">
+                <div class="ser-icon text-center ">
+                  <i class="fab fa-mixer icon-ser main-color"></i>
+
+                </div>
+              </div>
+              <div class="col-10 text-ser ps-0">
+                <div class="ser-text ">
+                  <h6>
+                    <a href="#" class="text-decoration-none">
+                      Intro Slider</a>
+                  </h6>
+                  <p>
+                    Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias
+                    ut.
+
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+
+    </div>
+
+ <!--
+    position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+***************
+ -->
+  </section>
+
 
 
   
