--- a/index.html
+++ b/index.html
@@ -1431,6 +1431,91 @@ width: 100%;
       </div>
     </div>
   </section>
+  <section id="client">
+    <div class="container">
+      <div class="title pt-5">
+        <div class="hidden">
+          <h2>C</h2>
+
+          <h3>
+            Client Reviews
+          </h3>
+          <div class="line"></div>
+        </div>
+
+
+        <p class="width m-auto fw-bold "> Donec purus est, tincidunt eu sodales quis, vehicula quis enim. Morbi dapibus,
+          tellus a gravida faucibus, elit ipsum sollicitudin risus, id ultricies arcu neque eget velit.</p>
+      </div>
+
+      <div class="client-imges py-3">
+
+        <div id="carouselExampleIndicators" class="carousel slide  py-5" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active num-1"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"
+              class="num-2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"
+              class="num-3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"
+              class="num-4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"
+              class="num-5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"
+              class="num-6"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"
+              class="num-7"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"
+              class="num-8"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"
+              class="num-9"></button>
+          </div>
+          <div class="carousel-inner ">
+            <div class="carousel-item active">
+              <div style="height: 300px;">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div style="height: 300px;">
+              </div>
+
+            </div>
+            <div class="carousel-item">
+              <div style="height: 300px;">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div style="height: 300px;">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div style="height: 300px;">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div style="height: 300px;">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div style="height: 300px;">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div style="height: 300px;">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div style="height: 300px;">
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <section id="contactus" class="pb-5">
     <div class="title py-5">
