--- a/index.html
+++ b/index.html
@@ -1431,91 +1431,7 @@ width: 100%;
       </div>
     </div>
   </section>
-  <section id="client">
-    <div class="container">
-      <div class="title pt-5">
-        <div class="hidden">
-          <h2>C</h2>
-
-          <h3>
-            Client Reviews
-          </h3>
-          <div class="line"></div>
-        </div>
-
-
-        <p class="width m-auto fw-bold "> Donec purus est, tincidunt eu sodales quis, vehicula quis enim. Morbi dapibus,
-          tellus a gravida faucibus, elit ipsum sollicitudin risus, id ultricies arcu neque eget velit.</p>
-      </div>
-
-      <div class="client-imges py-3">
-
-        <div id="carouselExampleIndicators" class="carousel slide  py-5" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active num-1"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"
-              class="num-2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"
-              class="num-3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"
-              class="num-4"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"
-              class="num-5"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"
-              class="num-6"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"
-              class="num-7"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"
-              class="num-8"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"
-              class="num-9"></button>
-          </div>
-          <div class="carousel-inner ">
-            <div class="carousel-item active">
-              <div style="height: 300px;">
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div style="height: 300px;">
-              </div>
-
-            </div>
-            <div class="carousel-item">
-              <div style="height: 300px;">
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div style="height: 300px;">
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div style="height: 300px;">
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div style="height: 300px;">
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div style="height: 300px;">
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div style="height: 300px;">
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div style="height: 300px;">
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  
 
   <section id="contactus" class="pb-5">
     <div class="title py-5">
@@ -1638,6 +1554,128 @@ width: 100%;
       </div>
 
   </section>
+  <section id="contactus" class="pb-5">
+    <div class="title py-5">
+      <div class="hidden">
+        <h2>G</h2>
+
+        <h3>
+          Get In Touch
+        </h3>
+        <div class="line"></div>
+      </div>
+
+
+      <p class="width m-auto fw-bold "> Mauris at tempus mi, ut iaculis dui. Integer laoreet mattis justo nec pretium.
+        Ut nibh elit, fermentum vel hendrerit vel, dictum nec velit. Morbi volutpat suscipit.</p>
+    </div>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="information">
+            <h3>
+              Get answers and advices from professional consultants.
+            </h3>
+            <div class="two-div">
+              <div class="row ">
+
+                <div class="col-1  ">
+                  <div class="contact-icon text-center ">
+                    <i class="far fa-map icon-contact main-color"></i>
+
+                  </div>
+                </div>
+                <div class="col-11 text-contact ps-4 ">
+                  <div class="contact-text ">
+                    <h6>
+                      <a href="#" class="text-decoration-none a-title ">
+                        Address</a>
+                    </h6>
+                    <p>
+                      1650 Lombard Street, San Francisco, CA 94123
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+            <div class="two-div">
+              <div class="row">
+                <div class="col-1 ">
+                  <div class="contact-icon text-center ">
+                    <i class="fas fa-mobile-alt icon-contact main-color"></i>
+
+                  </div>
+                </div>
+                <div class="col-11 text-contact ps-2 ">
+                  <div class="contact-text ">
+                    <h6>
+                      <a href="#" class="text-decoration-none a-title">
+
+                        Phone </a>
+                    </h6>
+                    <p>
+                      +1 (415) 876-3250 / +1 (415) 876-3251
+
+                    </p>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr>
+            <div class="two-div">
+              <div class="row ">
+                <div class="col-1 ">
+                  <div class="contact-icon text-center ">
+                    <i class="far fa-envelope icon-contact main-color"></i>
+
+                  </div>
+                </div>
+                <div class="col-11 text-contact ps-4 ">
+                  <div class="contact-text ">
+                    <h6>
+                      <a href="#" class="text-decoration-none a-title">
+
+                        Say Hello</a>
+                    </h6>
+                    <p> <a href="#" class="text-decoration-none e-protect">[email protected]</a>
+
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-md-6">
+
+          </div>
+
+        </div>
+        <div class="col-md-6">
+          <div class="form">
+            <form>
+              <input type="text" name="name" placeholder="Name" required class="w-100  input">
+              <input type="email" name="email" placeholder="Email" required class="w-100 input ">
+              <input type="tel" name="phone" placeholder="Phone" required class="w-100 input ">
+              <textarea type="text" name="message" placeholder="Message" required class="w-100 input pb-5 "></textarea>
+              <button type="submit" class=" btn main-background text-white ">
+                <i class="fas fa-paper-plane  "></i>
+                <span class="btn-title"> Send Message</span>
+              </button>
+            </form>
+          </div>
+        </div>
+
+      </div>
+
+  </section>
+
 
   <section id="footer" class="position-relative">
 
