--- a/index.html
+++ b/index.html
@@ -1554,128 +1554,132 @@ width: 100%;
       </div>
 
   </section>
-  <section id="contactus" class="pb-5">
-    <div class="title py-5">
-      <div class="hidden">
-        <h2>G</h2>
+  
 
-        <h3>
-          Get In Touch
-        </h3>
-        <div class="line"></div>
+  <section id="footer" class="position-relative">
+
+    <div class="container ">
+      <div class="icon-2">
+        <a href="#home"> <i class="fas fa-chevron-up text-white"></i></a>
       </div>
+      <div class=" row">
+        <div class="img-footer text-center py-3 ">
+          <img src="img/images/icon.png ">
+        </div>
+        <div class="row py-4">
+
+          <div class="col-md-3">
+            <div class="footer-box text-white">
+              <h5>
+                Contact Info
+              </h5>
+              <ul class="style">
+                <li>1650 Lombard Street,</li>
+                <li class="pb-3">San Francisco, CA 94123</li>
+                <li>+1 (415) 876-3250</li>
+                <li class="pt-0"><a href="#" class="  text-decoration-none ">[email protected]</a></li>
+
+              </ul>
 
 
-      <p class="width m-auto fw-bold "> Mauris at tempus mi, ut iaculis dui. Integer laoreet mattis justo nec pretium.
-        Ut nibh elit, fermentum vel hendrerit vel, dictum nec velit. Morbi volutpat suscipit.</p>
-    </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="footer-box text-white">
+              <h5>
+                Useful Links
+              </h5>
+              <ul class="style">
+                <li><a href="#" class="  text-decoration-none ">Support</a></li>
+                <li><a href="#" class="  text-decoration-none ">Privacy Policy</a></li>
+                <li><a href="#" class="  text-decoration-none ">Terms & Conditions</a></li>
+                <li><a href="#" class="  text-decoration-none ">Affiliate Program</a></li>
+                <li><a href="#" class="  text-decoration-none ">Careers</a></li>
+                </a></li>
 
-    <div class="container">
+              </ul>
 
-      <div class="row">
-        <div class="col-md-6">
-          <div class="information">
-            <h3>
-              Get answers and advices from professional consultants.
-            </h3>
-            <div class="two-div">
+
+            </div>
+
+          </div>
+          <div class="col-md-3">
+            <div class="footer-box text-white">
+              <h5>
+                Recent Posts
+              </h5>
+              <ul class="style">
+                <li><a href="#" class="  text-decoration-none ">Sunset in Venice</a></li>
+                <li><a href="#" class="  text-decoration-none ">Aerial View of Village</a></li>
+                <li><a href="#" class="  text-decoration-none ">Lighted Concrete City</a></li>
+                <li><a href="#" class="  text-decoration-none ">The Little Ghost</a></li>
+                <li><a href="#" class="  text-decoration-none "> Royal Oats ft. Waldo </a></li>
+                </a></li>
+
+              </ul>
+
+
+            </div>
+
+
+          </div>
+          <div class="col-md-3">
+            <div class="footer-box text-white">
+              <h5>
+                Recent Posts
+              </h5>
               <div class="row ">
-
-                <div class="col-1  ">
-                  <div class="contact-icon text-center ">
-                    <i class="far fa-map icon-contact main-color"></i>
-
-                  </div>
-                </div>
-                <div class="col-11 text-contact ps-4 ">
-                  <div class="contact-text ">
-                    <h6>
-                      <a href="#" class="text-decoration-none a-title ">
-                        Address</a>
-                    </h6>
-                    <p>
-                      1650 Lombard Street, San Francisco, CA 94123
-
-                    </p>
+                <div class="col-12">
+                  <div class="bt-footae">
+                    <a href="#" class="  text-decoration-none skill-footer ">HTML5</a>
+                    <a href="#" class="  text-decoration-none skill-footer ">CSS3</a>
+                    <a href="#" class="  text-decoration-none skill-footer ">jQuery</a>
                   </div>
                 </div>
               </div>
-            </div>
-            <hr>
-            <div class="two-div">
               <div class="row">
-                <div class="col-1 ">
-                  <div class="contact-icon text-center ">
-                    <i class="fas fa-mobile-alt icon-contact main-color"></i>
-
+                <div class="col-12">
+                  <div class="bt-footae ">
+                    <a href="#" class="  text-decoration-none skill-footer ">UX / UI</a>
+                    <a href="#" class="  text-decoration-none skill-footer padding-2">Web</a>
+                    <a href="#" class="  text-decoration-none skill-footer ">Graphic </a>
                   </div>
                 </div>
-                <div class="col-11 text-contact ps-2 ">
-                  <div class="contact-text ">
-                    <h6>
-                      <a href="#" class="text-decoration-none a-title">
-
-                        Phone </a>
-                    </h6>
-                    <p>
-                      +1 (415) 876-3250 / +1 (415) 876-3251
-
-                    </p>
-
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="bt-footae ">
+                    <a href="#" class="  text-decoration-none skill-footer padding ">Design</a>
+                    <a href="#" class="  text-decoration-none skill-footer ">Development </a>
                   </div>
                 </div>
               </div>
             </div>
-            <hr>
-            <div class="two-div">
-              <div class="row ">
-                <div class="col-1 ">
-                  <div class="contact-icon text-center ">
-                    <i class="far fa-envelope icon-contact main-color"></i>
-
-                  </div>
-                </div>
-                <div class="col-11 text-contact ps-4 ">
-                  <div class="contact-text ">
-                    <h6>
-                      <a href="#" class="text-decoration-none a-title">
-
-                        Say Hello</a>
-                    </h6>
-                    <p> <a href="#" class="text-decoration-none e-protect">[email protected]</a>
-
-
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div>
-          <div class="col-md-6">
-
-          </div>
-
-        </div>
-        <div class="col-md-6">
-          <div class="form">
-            <form>
-              <input type="text" name="name" placeholder="Name" required class="w-100  input">
-              <input type="email" name="email" placeholder="Email" required class="w-100 input ">
-              <input type="tel" name="phone" placeholder="Phone" required class="w-100 input ">
-              <textarea type="text" name="message" placeholder="Message" required class="w-100 input pb-5 "></textarea>
-              <button type="submit" class=" btn main-background text-white ">
-                <i class="fas fa-paper-plane  "></i>
-                <span class="btn-title"> Send Message</span>
-              </button>
-            </form>
           </div>
         </div>
+
 
       </div>
 
   </section>
+  <section id="last">
+    <div class="container">
+      <div class=" d-flex justify-content-between align-aitms-center">
 
+        <div class="icons pt-2 text-white">
+          <i class="fab fa-twitter  color"></i>
+          <i class="fab fa-facebook-f color"></i>
+          <i class="fab fa-instagram color "></i>
+          <i class="fas fa-basketball-ball color"></i>
+          <i class="fab fa-pinterest color"></i>
+        </div>
+        <div class=" last-text">
+          <p class="pt-2 "> Copyright © 2020 <a href="#" class=" text-decoration-none  fw-bold sub-text ">Angora</a></p>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
   <section id="footer" class="position-relative">
 
