last section added

--- a/index.html
+++ b/index.html
@@ -1805,6 +1805,24 @@ width: 100%;
     </div>
 
   </section>
+  <section id="last">
+    <div class="container">
+      <div class=" d-flex justify-content-between align-aitms-center">
+
+        <div class="icons pt-2 text-white">
+          <i class="fab fa-twitter  color"></i>
+          <i class="fab fa-facebook-f color"></i>
+          <i class="fab fa-instagram color "></i>
+          <i class="fas fa-basketball-ball color"></i>
+          <i class="fab fa-pinterest color"></i>
+        </div>
+        <div class=" last-text">
+          <p class="pt-2 "> Copyright © 2020 <a href="#" class=" text-decoration-none  fw-bold sub-text ">Angora</a></p>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
 
 
